<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/space_20"
    android:layout_marginEnd="@dimen/space_20"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_50"/>

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/cacttus_education"
        android:layout_below="@+id/ivLogo"
        android:layout_marginTop="@dimen/space_20"
        android:textSize="@dimen/text_size_22"
        android:textColor="@color/colorRed"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/write_your_email"
        android:layout_centerInParent="true"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/space_20"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:text="@string/log_in"
        android:layout_marginTop="@dimen/space_50"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorRed"
        android:layout_marginTop="@dimen/space_5"/>

    <Button
        android:id="@+id/btnOpenUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_url"
        android:layout_below="@+id/forgotPassword"
        android:layout_marginTop="@dimen/space_10"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/callNum"
        android:text="@string/call_number"
        android:layout_below="@+id/btnOpenUrl"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/space_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_10"
            android:textStyle="bold"
            android:text="@string/sign_up"/>

    </LinearLayout>

</RelativeLayout>